[project]
name = "oil_gas_logistics"
authors = [
    { name = "botan.b.abdullah@gmail.com", email = "botan.b.abdullah@gmail.com" }
]
description = "Managing Logistics for Oil & Gas "
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    # frappe -- https://github.com/frappe/frappe is installed via 'bench init'
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "license.txt"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit.core.buildapi"

[tool.bench.app]
url = "https://github.com/Hawre1987/reforming-logistics"

[tool.flit.module]
name = "oil_gas_logistics"

[tool.bench.frappe-dependencies]
frappe = ">=12.0.0"
