[project]
name = "oil_gas_logistics"
authors = [
    { name = "botan.b.abdullah@gmail.com", email = "botan.b.abdullah@gmail.com" }
]
description = "Managing Logistics for Oil & Gas "
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    # frappe -- https://github.com/frappe/frappe is installed via 'bench init'
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "license.txt"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "oil_gas_logistics.__version__"}

[tool.setuptools.packages.find]
include = ["oil_gas_logistics*"]

[tool.bench.app]
url = "https://github.com/Hawre1987/reforming-logistics"

[tool.bench.frappe-dependencies]
frappe = ">=12.0.0"
